Kaggle Notebook | mcts-catboost | Version 28

--- a/kaggle/mcts-catboost.ipynb
+++ b/kaggle/mcts-catboost.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99dcb4e2",
+   "id": "5a63eb98",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:46.158070Z",
-     "iopub.status.busy": "2024-11-27T22:42:46.157533Z",
-     "iopub.status.idle": "2024-11-27T22:42:48.867391Z",
-     "shell.execute_reply": "2024-11-27T22:42:48.866190Z"
+     "iopub.execute_input": "2024-11-28T22:36:59.482331Z",
+     "iopub.status.busy": "2024-11-28T22:36:59.481876Z",
+     "iopub.status.idle": "2024-11-28T22:37:04.250717Z",
+     "shell.execute_reply": "2024-11-28T22:37:04.249769Z"
     },
     "papermill": {
-     "duration": 2.717461,
-     "end_time": "2024-11-27T22:42:48.869623",
+     "duration": 4.777661,
+     "end_time": "2024-11-28T22:37:04.253326",
      "exception": false,
-     "start_time": "2024-11-27T22:42:46.152162",
+     "start_time": "2024-11-28T22:36:59.475665",
      "status": "completed"
     },
     "tags": []
@@ -37,6 +37,8 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "import pickle\n",
+    "import os\n",
+    "import polars\n",
     "\n",
     "import catboost as cb\n",
     "print(\"cb.__version__:\", cb.__version__)\n",
@@ -44,20 +46,18 @@
     "import sys\n",
     "sys.path.append(\"/kaggle/input/mcts-artifacts\")\n",
     "from preproc import process_test_data\n",
-    "\n",
-    "from sklearn.model_selection import StratifiedGroupKFold\n",
-    "from sklearn.preprocessing import OrdinalEncoder, StandardScaler"
+    "import kaggle_evaluation.mcts_inference_server"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "722417ae",
+   "id": "b7c38b41",
    "metadata": {
     "papermill": {
-     "duration": 0.002789,
-     "end_time": "2024-11-27T22:42:48.875806",
+     "duration": 0.002387,
+     "end_time": "2024-11-28T22:37:04.258863",
      "exception": false,
-     "start_time": "2024-11-27T22:42:48.873017",
+     "start_time": "2024-11-28T22:37:04.256476",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cab39994",
+   "id": "aaa92bbb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:48.883371Z",
-     "iopub.status.busy": "2024-11-27T22:42:48.882867Z",
-     "iopub.status.idle": "2024-11-27T22:42:53.884396Z",
-     "shell.execute_reply": "2024-11-27T22:42:53.883397Z"
+     "iopub.execute_input": "2024-11-28T22:37:04.266067Z",
+     "iopub.status.busy": "2024-11-28T22:37:04.265452Z",
+     "iopub.status.idle": "2024-11-28T22:37:12.235933Z",
+     "shell.execute_reply": "2024-11-28T22:37:12.234841Z"
     },
     "papermill": {
-     "duration": 5.008514,
-     "end_time": "2024-11-27T22:42:53.887217",
+     "duration": 7.976876,
+     "end_time": "2024-11-28T22:37:12.238353",
      "exception": false,
-     "start_time": "2024-11-27T22:42:48.878703",
+     "start_time": "2024-11-28T22:37:04.261477",
      "status": "completed"
     },
     "tags": []
@@ -96,6 +96,16 @@
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -109,61 +119,27 @@
     "\n",
     "# Load the function from the file\n",
     "with open(catboost_artifacts_path, 'rb') as f:\n",
-    "    catboost_artifacts = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d530fe0c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:53.895592Z",
-     "iopub.status.busy": "2024-11-27T22:42:53.895255Z",
-     "iopub.status.idle": "2024-11-27T22:42:53.902702Z",
-     "shell.execute_reply": "2024-11-27T22:42:53.901593Z"
-    },
-    "papermill": {
-     "duration": 0.013764,
-     "end_time": "2024-11-27T22:42:53.904744",
-     "exception": false,
-     "start_time": "2024-11-27T22:42:53.890980",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    catboost_artifacts = pickle.load(f)\n",
+    "\n",
     "len(catboost_artifacts[\"models\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "af67984e",
+   "execution_count": 3,
+   "id": "ed9c4355",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:53.913849Z",
-     "iopub.status.busy": "2024-11-27T22:42:53.913467Z",
-     "iopub.status.idle": "2024-11-27T22:42:53.924437Z",
-     "shell.execute_reply": "2024-11-27T22:42:53.923220Z"
+     "iopub.execute_input": "2024-11-28T22:37:12.246025Z",
+     "iopub.status.busy": "2024-11-28T22:37:12.245600Z",
+     "iopub.status.idle": "2024-11-28T22:37:12.257641Z",
+     "shell.execute_reply": "2024-11-28T22:37:12.256553Z"
     },
     "papermill": {
-     "duration": 0.018769,
-     "end_time": "2024-11-27T22:42:53.926954",
+     "duration": 0.019422,
+     "end_time": "2024-11-28T22:37:12.260740",
      "exception": false,
-     "start_time": "2024-11-27T22:42:53.908185",
+     "start_time": "2024-11-28T22:37:12.241318",
      "status": "completed"
     },
     "tags": []
@@ -179,8 +155,16 @@
     }
    ],
    "source": [
-    "class ModelInference:\n",
-    "    def __init__(self, models, numerical_cols, categorical_cols, encoder, scaler, text_cols=None):\n",
+    "class CATBoostInference:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        models,\n",
+    "        numerical_cols,\n",
+    "        categorical_cols,\n",
+    "        encoder,\n",
+    "        scaler,\n",
+    "        text_cols=None,\n",
+    "    ):\n",
     "        \"\"\"Initialize inference class with trained artifacts\n",
     "        \n",
     "        Args:\n",
@@ -194,14 +178,14 @@
     "        self.models = models\n",
     "        self.numerical_cols = numerical_cols\n",
     "        self.categorical_cols = categorical_cols\n",
-    "        self.text_cols = text_cols if text_cols is not None else []\n",
+    "        self.text_cols = text_cols\n",
     "        self.encoder = encoder\n",
     "        self.scaler = scaler\n",
     "\n",
     "        print(\"len(numerical_cols):\", len(numerical_cols))\n",
     "        print(\"len(categorical_cols):\", len(categorical_cols))\n",
     "        \n",
-    "    def predict(self, df_test):\n",
+    "    def predict_array(self, df_test):\n",
     "        \"\"\"Make predictions on test data\n",
     "        \n",
     "        Args:\n",
@@ -223,17 +207,17 @@
     "        \n",
     "        # Create CatBoost Pool for test data\n",
     "        features = self.numerical_cols + self.categorical_cols\n",
-    "        pool_params = {\n",
+    "        pool_kwargs = {\n",
     "            'data': test_processed[features],\n",
     "            'cat_features': self.categorical_cols,\n",
     "        }\n",
     "        \n",
-    "        if self.text_cols:\n",
+    "        if self.text_cols is not None:\n",
     "            features += self.text_cols\n",
-    "            pool_params['data'] = test_processed[features]\n",
-    "            pool_params['text_features'] = self.text_cols\n",
+    "            pool_kwargs['data'] = test_processed[features]\n",
+    "            pool_kwargs['text_features'] = self.text_cols\n",
     "            \n",
-    "        test_pool = cb.Pool(**pool_params)\n",
+    "        test_pool = cb.Pool(**pool_kwargs)\n",
     "        \n",
     "        # Get predictions from all models\n",
     "        predictions = np.mean([\n",
@@ -243,17 +227,23 @@
     "        predictions = np.clip(predictions, -1, 1)\n",
     "        \n",
     "        return predictions\n",
+    "    \n",
     "\n",
-    "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
+    "    def predict(self, test: polars.DataFrame, sample_sub: polars.DataFrame):\n",
+    "        test_pd = test.to_pandas()\n",
+    "        predictions = self.predict_array(test_pd)\n",
+    "        submission = sample_sub.with_columns(polars.Series(\"utility_agent1\", predictions))\n",
+    "        return submission\n",
     "\n",
-    "model_catboost = ModelInference(\n",
+    "\n",
+    "model_catboost = CATBoostInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
     "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
-    "    # text_cols=[\"LudRules\"],\n",
+    "    text_cols=catboost_artifacts[\"text_cols\"],\n",
     "    encoder=catboost_artifacts[\"encoder\"],\n",
     "    scaler=catboost_artifacts[\"scaler\"],\n",
     ")"
@@ -261,20 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bab30962",
+   "execution_count": 4,
+   "id": "d2e92e3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:53.935126Z",
-     "iopub.status.busy": "2024-11-27T22:42:53.934693Z",
-     "iopub.status.idle": "2024-11-27T22:42:54.188572Z",
-     "shell.execute_reply": "2024-11-27T22:42:54.187364Z"
+     "iopub.execute_input": "2024-11-28T22:37:12.268700Z",
+     "iopub.status.busy": "2024-11-28T22:37:12.267896Z",
+     "iopub.status.idle": "2024-11-28T22:37:12.827524Z",
+     "shell.execute_reply": "2024-11-28T22:37:12.826171Z"
     },
     "papermill": {
-     "duration": 0.260575,
-     "end_time": "2024-11-27T22:42:54.190839",
+     "duration": 0.566762,
+     "end_time": "2024-11-28T22:37:12.830507",
      "exception": false,
-     "start_time": "2024-11-27T22:42:53.930264",
+     "start_time": "2024-11-28T22:37:12.263745",
      "status": "completed"
     },
     "tags": []
@@ -282,30 +272,50 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Id</th><th>utility_agent1</th></tr><tr><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>233234</td><td>0.132371</td></tr><tr><td>233235</td><td>-0.151979</td></tr><tr><td>233236</td><td>-0.00422</td></tr></tbody></table></div>"
+      ],
       "text/plain": [
-       "array([ 0.13237058, -0.15197862, -0.00421987])"
+       "shape: (3, 2)\n",
+       "┌────────┬────────────────┐\n",
+       "│ Id     ┆ utility_agent1 │\n",
+       "│ ---    ┆ ---            │\n",
+       "│ i64    ┆ f64            │\n",
+       "╞════════╪════════════════╡\n",
+       "│ 233234 ┆ 0.132371       │\n",
+       "│ 233235 ┆ -0.151979      │\n",
+       "│ 233236 ┆ -0.00422       │\n",
+       "└────────┴────────────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sanity check\n",
-    "test = pd.read_csv(\"/kaggle/input/um-game-playing-strength-of-mcts-variants/test.csv\")\n",
-    "model_catboost.predict(test)"
+    "test = polars.read_csv(\"/kaggle/input/um-game-playing-strength-of-mcts-variants/test.csv\")\n",
+    "sample_sub = polars.read_csv(\"/kaggle/input/um-game-playing-strength-of-mcts-variants/sample_submission.csv\")\n",
+    "model_catboost.predict(test, sample_sub)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "138f7da9",
+   "id": "73d9e564",
    "metadata": {
     "papermill": {
-     "duration": 0.003053,
-     "end_time": "2024-11-27T22:42:54.197374",
+     "duration": 0.002971,
+     "end_time": "2024-11-28T22:37:12.837056",
      "exception": false,
-     "start_time": "2024-11-27T22:42:54.194321",
+     "start_time": "2024-11-28T22:37:12.834085",
      "status": "completed"
     },
     "tags": []
@@ -317,83 +327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "013dc184",
+   "execution_count": 5,
+   "id": "1742328c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:54.205712Z",
-     "iopub.status.busy": "2024-11-27T22:42:54.205353Z",
-     "iopub.status.idle": "2024-11-27T22:42:54.695664Z",
-     "shell.execute_reply": "2024-11-27T22:42:54.694671Z"
+     "iopub.execute_input": "2024-11-28T22:37:12.845426Z",
+     "iopub.status.busy": "2024-11-28T22:37:12.845017Z",
+     "iopub.status.idle": "2024-11-28T22:37:13.454720Z",
+     "shell.execute_reply": "2024-11-28T22:37:13.453600Z"
     },
     "papermill": {
-     "duration": 0.497323,
-     "end_time": "2024-11-27T22:42:54.698029",
+     "duration": 0.617019,
+     "end_time": "2024-11-28T22:37:13.457426",
      "exception": false,
-     "start_time": "2024-11-27T22:42:54.200706",
+     "start_time": "2024-11-28T22:37:12.840407",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import polars as pl\n",
-    "import kaggle_evaluation.mcts_inference_server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "52e2fea2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:54.706546Z",
-     "iopub.status.busy": "2024-11-27T22:42:54.706057Z",
-     "iopub.status.idle": "2024-11-27T22:42:54.711442Z",
-     "shell.execute_reply": "2024-11-27T22:42:54.710396Z"
-    },
-    "papermill": {
-     "duration": 0.012056,
-     "end_time": "2024-11-27T22:42:54.713564",
-     "exception": false,
-     "start_time": "2024-11-27T22:42:54.701508",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def predict(test: pl.DataFrame, sample_sub: pl.DataFrame):\n",
-    "    test_pd = test.to_pandas()\n",
-    "    predictions = model_catboost.predict(test_pd)\n",
-    "    submission = sample_sub.with_columns(pl.Series(\"utility_agent1\", predictions))\n",
-    "    return submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1adf7926",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-27T22:42:54.722029Z",
-     "iopub.status.busy": "2024-11-27T22:42:54.721503Z",
-     "iopub.status.idle": "2024-11-27T22:42:55.433166Z",
-     "shell.execute_reply": "2024-11-27T22:42:55.432223Z"
-    },
-    "papermill": {
-     "duration": 0.71843,
-     "end_time": "2024-11-27T22:42:55.435440",
-     "exception": false,
-     "start_time": "2024-11-27T22:42:54.717010",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "inference_server = kaggle_evaluation.mcts_inference_server.MCTSInferenceServer(predict)\n",
+    "inference_server = kaggle_evaluation.mcts_inference_server.MCTSInferenceServer(model_catboost.predict)\n",
     "\n",
     "if os.getenv('KAGGLE_IS_COMPETITION_RERUN'):\n",
     "    inference_server.serve()\n",
@@ -408,13 +362,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d22e43",
+   "id": "e33fd55a",
    "metadata": {
     "papermill": {
-     "duration": 0.004025,
-     "end_time": "2024-11-27T22:42:55.443028",
+     "duration": 0.002815,
+     "end_time": "2024-11-28T22:37:13.463586",
      "exception": false,
-     "start_time": "2024-11-27T22:42:55.439003",
+     "start_time": "2024-11-28T22:37:13.460771",
      "status": "completed"
     },
     "tags": []
@@ -464,14 +418,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.822642,
-   "end_time": "2024-11-27T22:42:56.268297",
+   "duration": 18.190555,
+   "end_time": "2024-11-28T22:37:14.391144",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-27T22:42:43.445655",
+   "start_time": "2024-11-28T22:36:56.200589",
    "version": "2.6.0"
   }
  },
